Styled the elements and created functions to do the operations, also added functionality to the buttons

--- a/index.html
+++ b/index.html
@@ -5,8 +5,49 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src=".js" defer></script>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <text>Just for testing</text>
+    <div class="maincontainer">
+        <div id="display"></div>
+        <button class="clearButton">Clear</button>
+        <div class="firstrow">
+            <button class="number">7</button>
+            <button class="number">8</button>
+            <button class="number">9</button>
+            <button class="ACbutton">AC</button>
+            <button class="number">OFF</button>
+        </div>
+        <div class="secondrow">
+            <button class="number">4</button>
+            <button class="number">5</button>
+            <button class="number">6</button>
+            <button class="operator">x</button>
+            <button class="operator">➗</button>
+        </div>
+        <div class="thirdrow">
+        <div class="numbers">
+            <div class="firstrowNumbers">
+                <button class="number">1</button>
+                <button class="number">2</button>
+                <button class="number">3</button>
+            </div>
+            <div class="secondRowOfNumbers">
+                <button class="number">0</button>
+                <button class="number">00</button>
+                <button class="number">.</button>
+            </div>
+        </div>
+        <div class="operatorcontainer">
+            <button class="operator">+</button>
+        </div>
+        <div class="operator2container">
+            <button class="operator">-</button>
+            <button class="equalsoperator">=</button>
+        </div>
+    </div>
+        </div>
+
+    </div>
 </body>
 </html>
