Moved waitingforsecond to operator, fixes issue where it wasn't working with double digits

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="maincontainer">
-        <div id="display"></div>
+        <div id="display">0</div>
         <button class="clearButton">Clear</button>
         <div class="firstrow">
             <button class="number">7</button>
@@ -35,7 +35,7 @@
             <div class="secondRowOfNumbers">
                 <button class="number">0</button>
                 <button class="number">00</button>
-                <button class="number">.</button>
+                <button class="dotoperator">.</button>
             </div>
         </div>
         <div class="operatorcontainer">
