--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 <body>
     <div class="maincontainer">
         <div id="display">0</div>
-        <button class="clearButton">Clear</button>
+        <button class="ACbutton">AC</button>
         <div class="firstrow">
             <button class="number">7</button>
             <button class="number">8</button>
             <button class="number">9</button>
-            <button class="ACbutton">AC</button>
+            <button class="DeleteButton">DEL</button>
             <button class="number">OFF</button>
         </div>
         <div class="secondrow">
