--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <button class="number">8</button>
             <button class="number">9</button>
             <button class="DeleteButton">DEL</button>
-            <button class="number">OFF</button>
+            <button class="offButton">OFF</button>
         </div>
         <div class="secondrow">
             <button class="number">4</button>
